# approximation2_qt

./: .gitignore  CMakeLists.txt  approximator2d.cpp  approximator2d.h  error.cpp  error.h  func.cpp  func.h  main.cpp  method_result.h  method_runner.cpp  method_runner.h  method_selector.cpp  method_selector.h  parallel_runner.cpp  parallel_runner.h  plotwidget2d.cpp  plotwidget2d.h  shared_input.h  task3.cpp  task3.h  task31.cpp  task31.h  task5.cpp  task5.h  task6.cpp  task6.h
